2002-02-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c:
	Applied dynamic button title patch by Hippo

2002-02-01  Dan Espen  <dane@mk.telcordia.com>

	* FvwmWinList/FvwmWinList.1:
	* FvwmScroll/FvwmScroll.1:
	* FvwmScript/FvwmScript.1:
	* FvwmSave/FvwmSave.1:
	* FvwmPager/FvwmPager.1:
	* FvwmM4/FvwmM4.1:
	* FvwmIconMan/FvwmIconMan.1:
	* FvwmDragWell/FvwmDragWell.1:
	* FvwmCpp/FvwmCpp.1: .fvwmrc -> .fvwm2rc

	* FvwmButtons/FvwmButtons.1: Language fix.

2002-01-31  olicha  <olivier.chapuis@free.fr>

	* FvwmButtons/FvwmButtons.1:
	Documented the (No)FvwmModule flags for the Swallow option


2002-01-31  Mikhael Goikhman  <migo@homemail.com>

	* FvwmForm/FvwmForm.c (main):
	remove compatibility support for dot-named aliases

2002-01-30  olicha  <olivier.chapuis@free.fr>

	* FvwmWinList/FvwmWinList.c (main):
	* FvwmTaskBar/FvwmTaskBar.c (main):
	* FvwmScript/types.h:
	* FvwmScript/FvwmScript.c (main):
	* FvwmPager/FvwmPager.c (main):
	* FvwmIdent/FvwmIdent.c (main):
	* FvwmIconMan/FvwmIconMan.c (main):
	* FvwmIconMan/FvwmIconMan.h:
	* FvwmIconBox/FvwmIconBox.c (main):
	* FvwmForm/FvwmForm.c (main):
	* FvwmButtons/FvwmButtons.c (main):
	Use FInitLocale in the place of setlocale

2002-01-28  olicha  <olivier.chapuis@free.fr>

	* FvwmButtons/FvwmButtons.c (ProcessMessage):
	* FvwmButtons/FvwmButtons.h:
	Rewrite the non OLD_EXPOSE code and undef OLD_EXPOSE

	* FvwmButtons/FvwmButtons.c (recursive_change_colorset):
	(swallow):
	(DeadPipeCleanup):
	* FvwmButtons/parse.c (ParseSwallow):
	(ParseButton):
	(ParsePanel):
	* FvwmButtons/FvwmButtons.h:
	Added a (no)FvwmModule flags to Swallow

	* FvwmButtons/FvwmButtons.c (main):
	(process_message):
	(handle_config_info_packet):
	(change_colorset):
	(DeadPipeCleanup):
	(recursive_change_colorset):
	(swallow):
	(send_bg_change_to_module):
	* FvwmButtons/draw.c (RedrawButton):
	* FvwmBacker/FvwmBacker.c (ProcessMessage):
	* FvwmDragWell/fvwmDragWell.c (myXNextEvent):
	* FvwmWinList/FvwmWinList.c (ProcessMessage):