@@ -1,3 +1,8 @@
+2002-02-03  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
+	Fixed a read descriptor problem 
+
 2002-02-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/FvwmButtons.c:
